Project architecture has created Phase3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=Online-Course-Application
+spring.datasource.url=jdbc:mysql://localhost:3306/Online-Course-Application?createDatabaseIfNotExist=true
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#server.error.include-stacktrace=never
+#Logging.file.name=logger/log.txt
+#management.endpoints.web.exposure.include=health,info,metrics,loggers
+
+#spring.mail.host-smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=edutechkenigroup@gmail.com
+#spring.mail.password=zawmybgfigzutpra
+#spring.mail.properties.mail.swtp.auth=true
+#spring.mail.properties.mail.setp.starttis.enable=true
