Final phase commit

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,9 +10,9 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 #Logging.file.name=logger/log.txt
 #management.endpoints.web.exposure.include=health,info,metrics,loggers
 
-#spring.mail.host-smtp.gmail.com
-#spring.mail.port=587
-#spring.mail.username=edutechkenigroup@gmail.com
-#spring.mail.password=zawmybgfigzutpra
-#spring.mail.properties.mail.swtp.auth=true
-#spring.mail.properties.mail.setp.starttis.enable=true
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=edutechkenigroup@gmail.com
+spring.mail.password=zawmybgfigzutpra
+spring.mail.properties.mail.swtp.auth=true
+spring.mail.properties.mail.setp.starttis.enable=true
