--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,6 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=edutechkenigroup@gmail.com
-spring.mail.password=zawmybgfigzutpra
+spring.mail.password=
 spring.mail.properties.mail.swtp.auth=true
 spring.mail.properties.mail.setp.starttis.enable=true
